--- a/static/css/index.css
+++ b/static/css/index.css
@@ -106,7 +106,13 @@ body {
     width: 100%;
     height: 100%;
 }
-
+.video-container {
+  text-align: center; /* 文本居中 */
+  display: flex; /* 使用flex布局 */
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
+  /* height: 100%; 让容器占据整个页面高度 */
+}
 .publication-body img {
 }
 
